# astra-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  astra  compiler
src/: main.cpp
src/abstract-syntax-tree/: ast.h  ast_printer.h
src/code-generator/: ir_codegen.cpp  ir_codegen.h  runtime.c
src/lexer/: keywords.h  lexer.cpp  lexer.h  token.h
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/parser/: parser.cpp  parser.h
src/semantic/: semantic_analyzer.h  symbol_table.h
src/shared/: symbol_table.h
tests/: astra.acc
